objects/ChargentOrders__ChargentOrder__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Asset for know the Orders and Payment from &quot;Chargent App&quot;</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Chargent Orders</relationshipLabel>
        <relationshipName>Chargent_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Account to which this Order is related.This shows the Account record this order was created for or used by. This field may be populated manually, as well as automateically when an order is created by using the Payment Console or Payment Request from Chargent Anywhere when configured on the Account object.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chargent Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Balance_Due__c</fullName>
        <description>This field subtracts the total of all transactions (both manual and recurring) from the Total field. The Payment Stop option of Balance Due uses this field to determine when to stop recurring charges.</description>
        <formula>ChargentOrders__Total__c -  ChargentOrders__Transaction_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field subtracts the total of all transactions (both manual and recurring) from the Total field.  The Payment Stop option of Balance Due uses this field to determine when to stop recurring charges.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Last_4__c</fullName>
        <label>Bank Account Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Name__c</fullName>
        <description>The name on the bank account, typically a first and last name, or company name for business accounts.</description>
        <inlineHelpText>me on the Bank Account.  e.g., John Doe</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Number__c</fullName>
        <description>The unique identification number for the specific account at the financial institution that the payer is using to facilitate payments.</description>
        <inlineHelpText>Please enter the Bank Account number without spaces or dashes</inlineHelpText>
        <label>Bank Account Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Type__c</fullName>
        <description>The descriptor given by the financial institution that holds the account.
This is important, as certain systems may not allow payment to be taken from certain types of accounts.
e.g., Checking, Business Checking, Savings, Money Market.</description>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentOrders__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Name__c</fullName>
        <description>Commercial name of the financial institution that the bank account is at.
e.g., NAB, RBS, Wells Fargo, Bank of America</description>
        <inlineHelpText>Ex: &quot;Wells Fargo Bank&quot; or &quot;Bank of America&quot;</inlineHelpText>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Routing_Number__c</fullName>
        <description>This is the string of numbers that identifies a financial institution.

This value is called by different names on different systems and in different countries.  E.g., SWIFT, IBAN, BIC, Bank Code, BSB, Routing Number</description>
        <inlineHelpText>Please enter the Bank Routing number with no spaces or dashes</inlineHelpText>
        <label>Bank Routing Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Address_Line_2__c</fullName>
        <description>The apt, suite, floor, unit of the address associated with the payment source being used for this order. 

e.g., Apt 3, Unit 15, Floor 2</description>
        <label>Billing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Address__c</fullName>
        <description>The street name and address number associated with the payment source being used for this order. 

e.g., 1234 Main St.</description>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_City__c</fullName>
        <description>The city of the address associated with the payment source being used for this order.</description>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Company__c</fullName>
        <description>The name of the organization associated with the payment source being used for this order.</description>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Country__c</fullName>
        <description>The country of the address associated with the payment source for this order.</description>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Email__c</fullName>
        <description>The email address where billing notifications related to this order will be sent. This email address will receive automated emails from the Chargent system including but not limited to: payment receipts, Payment Request emails, and Automated Collections emails.  

This information IS NOT shared with AppFrontier LLC, the makers of Chargent.</description>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Fax__c</fullName>
        <description>The payer&apos;s fax number.  It is sent to some gateways.</description>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_First_Name__c</fullName>
        <description>The first name associated with the payment source being used for this order.</description>
        <label>Billing First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Last_Name__c</fullName>
        <description>The last name associated with the payment source being used for this order.</description>
        <label>Billing Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Phone__c</fullName>
        <description>The phone number associated with the payment source being used for this order.</description>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_State_Province__c</fullName>
        <description>If populated, this field is used instead of the Billing State picklist.</description>
        <inlineHelpText>Used by ePDQ Gateway (text input vs US state picklist)</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_State__c</fullName>
        <description>The state of the address associated with the payment source being used for this order.</description>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Zip_Postal__c</fullName>
        <description>The zip / postal code associated with the payment source being used for this order.</description>
        <label>Billing Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__CPF_Number__c</fullName>
        <description>The CPF number, used for payments on the AstroPay gateway.  In the LATAM market.  As of Chargent 6.0 it is not used in other gateways.</description>
        <label>CPF Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Expiration_Month__c</fullName>
        <description>The month of the expiration date for the card being used for payment on this order.</description>
        <label>Card Expiration Month</label>
        <length>2</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Expiration_Year__c</fullName>
        <description>The year of the expiration date for the card being used for payment on this order.</description>
        <label>Card Expiration Year</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Last_4__c</fullName>
        <description>The last four digits of the card being used for payment on this order.</description>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Month_Indicator__c</fullName>
        <description>This field receives the value of ChargentOrders__Card_Expiration_Month__c upon record creation. It is used the TChargentBatchProcessing batch process as well as the &quot;OrderChargent&quot; trigger.</description>
        <label>Card Expiration Month Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Number__c</fullName>
        <description>The full card number of the card being used for payment on this order.</description>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Type__c</fullName>
        <description>E.g., Visa, MasterCard, American Express.</description>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentOrders__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Year_Indicator__c</fullName>
        <description>This field receives the value of ChargentOrders__Card_Expiration_Year__c upon record creation. It is used in the TChargentBatchProcessing batch process as well as the &quot;OrderChargent&quot; trigger.</description>
        <label>Card Expiration Year Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Charge_Amount__c</fullName>
        <description>The amount to be authorized or charged by the next transaction. If there are multiple charges, this field will automatically reflect the Amount of the order minus the total amount of successful charges.</description>
        <inlineHelpText>The amount to be authorized or charged by the next transaction. If there are multiple charges, this field will automatically reflect the Amount of the order minus the total amount of successful charges.</inlineHelpText>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Charge_Date__c</fullName>
        <description>This field displays the day of the month on which this recurring order collects payment.

The Chargent batch looks at the last transaction that is marked as recurring then charges again based on the frequency.  This caused slippage when there is a late payment.   

E.g., If a customer late pays by 11 days 3 months in a row, without Charge Date set you would miss a month&apos;s payment.   With Charge date set, the payment source will be charged the following month on the day of month set in this field.</description>
        <inlineHelpText>This field is the day of the month that Chargent will attempt the recurring transaction</inlineHelpText>
        <label>Charge Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Check_Number__c</fullName>
        <description>Used when recording paper checks in Chargent.  This is sent to some gateways, when using the ACH system in the USA.</description>
        <label>Check Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Credit_Amount__c</fullName>
        <description>The amount to be credited when sending unlinked / unreferenced credits.</description>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Credit_Card_Name__c</fullName>
        <description>Name on the card to be charged - will default to Billing First and Billing Last</description>
        <formula>ChargentOrders__Billing_First_Name__c &amp; &quot; &quot; &amp;  ChargentOrders__Billing_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name on the card to be charged - will default to Billing First and Billing Last</inlineHelpText>
        <label>Card Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Currency__c</fullName>
        <description>Thie field is used by a couple of the Chargent batches. It determines the currency for the Charge Amount. The inline VF currency component sets that field&apos;s value. The label for this field includes &quot;(old)&quot; as it is no longer on the Chargent Order page layout by default as it is prefered that the VF currency component is used instead.</description>
        <inlineHelpText>Only supported with Barclays ePDQ gateway</inlineHelpText>
        <label>Currency (Old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Pound Sterling</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>Russian Ruble</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>Thailand Baht</fullName>
                </value>
                <value>
                    <fullName>US Dollar</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Customer_IP__c</fullName>
        <description>This field displays the IP address of the customer during the transaction and is commonly used for fraud prevention.</description>
        <inlineHelpText>For Authorize.net only.  Customers can store the IP address here to have it sent directly to the gateway to be part of your gateway transaction record.</inlineHelpText>
        <label>Customer IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Customer_Token__c</fullName>
        <description>This field records the Recurring Profile ID for PayFlow Pro and Braintree gateway customers.</description>
        <label>Customer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Date_of_Birth__c</fullName>
        <description>Birth date of the customer associated with this order. 

As of Chargent 6.0, this field is used by AstroPay gateway only.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Description__c</fullName>
        <description>May be used to add a description or note for this Order record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway_Card_Handling__c</fullName>
        <formula>TEXT(ChargentOrders__Gateway__r.ChargentBase__Credit_Card_Data_Handling__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gateway Card Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment gateway to be used for this order.</description>
        <inlineHelpText>Optional - select which active gateway to process the transaction with</inlineHelpText>
        <label>Gateway</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose an Active Gateway record</errorMessage>
            <filterItems>
                <field>ChargentBase__Gateway__c.ChargentBase__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ChargentBase__Gateway__c</referenceTo>
        <relationshipLabel>Chargent Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Invoice_Number__c</fullName>
        <description>Stores a unique invoice ID entered by the user. This field is used by finance departments to reconcile transactions, and is typically used for Level II and III transactions.</description>
        <inlineHelpText>Please enter the invoice number for this record.</inlineHelpText>
        <label>Invoice Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Last_Recurring_Transaction__c</fullName>
        <description>Displays the most recent date on which a trasnaction was made on this recurring order.</description>
        <label>Last Recurring Transaction</label>
        <summarizedField>ChargentOrders__Transaction__c.ChargentOrders__Gateway_Date__c</summarizedField>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Type__c</field>
            <operation>equals</operation>
            <value>Charge</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentOrders__Transaction__c.ChargentOrders__Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Last_Transaction__c</fullName>
        <description>Displays the most recent date on which a transaction was made on this order.</description>
        <label>Last Transaction</label>
        <summarizedField>ChargentOrders__Transaction__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>ChargentOrders__Transaction__c.ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentOrders__Transaction__c.ChargentOrders__Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Manual_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when you want to authorize or charge an amount different than the amount due on the order. This will prevent the &quot;Charge Amount&quot; from being automatically calculated and updated.</description>
        <inlineHelpText>Check this box when you want to authorize or charge an amount different than the amount due on the order. This will prevent the &quot;Charge Amount&quot; from being automatically calculated and updated.</inlineHelpText>
        <label>Manual Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Mercury_ID__c</fullName>
        <label>Unused Field 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Next_Transaction_Date__c</fullName>
        <description>Use this field to double check and ensure that your recurring payment details are setup correctly. This field DOES NOT control WHEN a charge will be done. Rather Chargent applies the same logic here that our scheduling engine does</description>
        <inlineHelpText>Use this field to double check and ensure that your recurring payment details are setup correctly.  This field DOES NOT control WHEN a charge will be done.  Rather Chargent applies the same logic here that our scheduling engine does.</inlineHelpText>
        <label>Next Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__No_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This may have been set by the Colgin Administrator on a Manual Order</inlineHelpText>
        <label>No Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__OrderNumber__c</fullName>
        <description>Stores, then sends the Order/Invoice number  to the gateway when the transaction is made. Also used in the TChargentBatchProcessing batch process.</description>
        <inlineHelpText>Stores, then sends the Order/Invoice number  to the gateway when the transaction is made.</inlineHelpText>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>